--- a/views/tickets/login.ejs
+++ b/views/tickets/login.ejs
@@ -45,6 +45,7 @@
                                 localStorage.setItem("userEmail", data.user.email);
                                 localStorage.setItem("userName", data.user.nome);
                                 localStorage.setItem("userPhone", data.user.phone);
+                                localStorage.setItem("userId", data.user.id)
                                 window.location.href = "/select-tickets";
                             }
                         })
