--- a/views/tickets/confirm-seats.ejs
+++ b/views/tickets/confirm-seats.ejs
@@ -23,16 +23,14 @@
             </div>
         </div>
         <script>
-            // Função que será chamada ao carregar a página
             window.onload = function () {
                 const minhaVariavel = localStorage.getItem('admin');
                 if (!minhaVariavel) window.location.href = '/admin';
             }
 
             function inputformatCPF(input) {
-                let value = input.value.replace(/\D/g, ''); // Remove todos os caracteres não numéricos
+                let value = input.value.replace(/\D/g, '');
 
-                // Aplica a máscara de CPF conforme o número é digitado
                 if (value.length > 3) {
                     value = value.slice(0, 3) + '.' + value.slice(3);
                 }
@@ -43,7 +41,7 @@
                     value = value.slice(0, 11) + '-' + value.slice(11, 13);
                 }
 
-                input.value = value; // Atualiza o campo com a formatação correta
+                input.value = value;
             }
 
             function confirmaPagamento(idCadeira) {
