--- a/views/tickets/admin.ejs
+++ b/views/tickets/admin.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<%- include('../partials/head', { title: 'Admin' }) %>
+<%- include('../partials/head', { title: 'IngressosNaJu' }) %>
 
     <body>
         <div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
