--- a/views/tickets/select-tickets.ejs
+++ b/views/tickets/select-tickets.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 
-<%- include('../partials/head', { title: 'Seleção de ingressos' }) %>
+<%- include('../partials/head', { title: 'IngressosNaJu' }) %>
 
   <body>
     <div class="container d-flex flex-column justify-content-center align-items-center"  style="height: 100%;">
