--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!-- views/index.ejs -->
 <!DOCTYPE html>
 <html>
-<%- include('partials/head', { title: 'Evento' }) %>
+<%- include('partials/head', { title: 'IngressosNaJu' }) %>
 
   <body>
     <div class="container d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
@@ -10,10 +10,6 @@
         <button type="button" class="btn btn-success w-75 my-2 mx-4" data-bs-toggle="modal"
           data-bs-target="#loginComprarModal">Comprar Ingressos</button>
       </div>
-      <!--<div class="row justify-content-center w-100">
-        <button type="button" class="btn btn-secondary w-75 my-2 mx-4" data-bs-toggle="modal"
-          data-bs-target="#loginTrocarModal">Trocar Ingressos</button>
-      </div>-->
       <div class="row justify-content-center w-100">
         <button type="button" class="btn btn-secondary w-75 my-2 mx-4" data-bs-toggle="modal"
           onclick="window.open('https://wa.me/557399435704?text=Vim%20do%20site', '_blank')">
@@ -23,10 +19,12 @@
               d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232" />
           </svg>
           WhatsApp</button>
+          <div class="row justify-content-center w-100 align-items-center">
+            <p style="color: #9c9c9c; text-align: center;">criado por <i>IngressosNaJu</i></p>
+          </div>
       </div>
     </div>
 
-    <!-- Modal comprar ingresso -->
     <div class="modal fade" id="loginComprarModal" tabindex="-1" aria-labelledby="loginComprarModalLabel"
       aria-hidden="true">
       <div class="modal-dialog">
@@ -51,7 +49,6 @@
       </div>
     </div>
 
-    <!-- Modal trocar ingresso -->
     <div class="modal fade" id="loginTrocarModal" tabindex="-1" aria-labelledby="loginTrocarModalLabel"
       aria-hidden="true">
       <div class="modal-dialog">
