--- a/views/tickets/confirm-seats.ejs
+++ b/views/tickets/confirm-seats.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<%- include('../partials/head', { title: 'Seleção de poltronas' }) %>
+<%- include('../partials/head', { title: 'IngressosNaJu' }) %>
 
     <body>
         <div class="container align-items-top justify-content-center" style="height: 100vh;">
