feat: espaçamento botões admin

--- a/views/tickets/confirm-seats.ejs
+++ b/views/tickets/confirm-seats.ejs
@@ -82,10 +82,10 @@
                                                     Sessão ${cadeira.sessao}, Andar ${cadeira.andar}, Fileira ${cadeira.fileira}, Poltrona ${cadeira.numero}
                                                 </p>
                                             </div>
-                                            <div class="col-1">
+                                            <div class="col-2 d-flex align-items-center">
                                                 <button type="submit" class="btn btn-success" onclick="confirmaPagamento('${cadeira.id}')">✔️</button>
                                             </div>
-                                            <div class="col-1">
+                                            <div class="col-2 d-flex align-items-center">
                                                 <button type="submit" class="btn btn-danger" onclick="negarPagamento('${cadeira.id}')">❌</button>
                                             </div>
                                         </div>
@@ -104,4 +104,5 @@
 
         </script>
     </body>
+
 </html>
