feat: criação de json apos confirmação de compra

--- a/views/tickets/select-seats.ejs
+++ b/views/tickets/select-seats.ejs
@@ -251,7 +251,7 @@
 
           try {
             const reservationPromises = assentos.map(({ andar, fileira, numero }) =>
-              fetch(`/getAssento/${sessao}/${andar}/${fileira}/${numero}/${userId}`, { method: 'POST' })
+              fetch(`/getAssento/${sessao}/${andar}/${fileira}/${numero}/${userId}/${cpf}`, { method: 'POST' })
                 .then(response => response.json())
             );
 
