feat: exibindo cpf na busca geral de pendentes

--- a/views/tickets/confirm-seats.ejs
+++ b/views/tickets/confirm-seats.ejs
@@ -192,7 +192,7 @@
                                     <div class="row mt-2" id="${cadeira.id}">
                                         <div class="col-5">
                                             <p class="p-2 bg-light border rounded">
-                                                Sessão ${cadeira.sessao}, Andar ${cadeira.andar}, Fileira ${cadeira.fileira}, Poltrona ${cadeira.numero}
+                                                Sessão ${cadeira.sessao}, Andar ${cadeira.andar}, Fileira ${cadeira.fileira}, Poltrona ${cadeira.numero}, CPF: ${cadeira.qrcode_content.cpf}
                                             </p>
                                         </div>
                                     </div>
